--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,3 @@
-﻿annotated-types==0.6.0
-anyio==3.7.1
-asgiref==3.7.2
-beautifulsoup4==4.12.3
-blinker==1.9.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-cssselect==1.2.0
-distlib==0.3.7
-Django==4.2.2
-docker==7.0.0
-elastic-transport==8.12.0
-elasticsearch==5.5.3
-exceptiongroup==1.1.3
-fastapi==0.104.1
-feedfinder2==0.0.4
-feedparser==6.0.11
-filelock==3.12.2
-Flask==3.1.0
-Flask-Cors==5.0.0
-idna==3.4
-importlib_metadata==8.5.0
-ioutil==1.0.3
-itsdangerous==2.2.0
-jieba3k==0.35.1
-Jinja2==3.1.4
-joblib==1.3.2
-local==1.0.0
-lxml==5.1.0
-MarkupSafe==3.0.2
-newspaper3k==0.2.8
-nltk==3.8.1
-np==1.0.2
-numpy==1.25.2
-oauthlib==3.2.2
-packaging==23.2
-pandas==2.2.0
-pillow==10.2.0
-pipenv==2023.7.23
-platformdirs==3.10.0
-pyarrow==15.0.0
-pydantic==2.4.2
-pydantic_core==2.10.1
-pyperclip==1.8.2
-python-dateutil==2.8.2
-pytz==2024.1
-PyYAML==6.0.1
-regex==2023.8.8
-requests==2.31.0
-requests-file==2.0.0
-requests-oauthlib==1.3.1
-sgmllib3k==1.0.0
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-speedtest-cli==2.1.3
-sqlparse==0.4.4
-srutil==1.0.3
-starlette==0.27.0
-tabulate==0.9.0
-textblob==0.17.1
-tinysegmenter==0.3
-tldextract==5.1.1
-toml==0.10.2
-tqdm==4.66.1
-tweepy==4.14.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.4
-vaderSentiment==3.3.2
-virtualenv==20.24.3
-virtualenv-clone==0.5.7
-Werkzeug==3.1.3
-wikipedia==1.4.0
-zipp==3.21.0
+flask
+gunicorn
+numpy==1.21.6
